Fix: Better title responsiveness on mobile.

--- a/src/articles/style.css
+++ b/src/articles/style.css
@@ -10,7 +10,7 @@ article {
 
 article .title {
     font-size: 40px;
-    line-height: 60px;
+    line-height: 45px;
     margin: .5em 0;
 }
 
